--- a/style.scss
+++ b/style.scss
@@ -163,7 +163,7 @@ img {
   }
 }
 
-#.site-avatar {
+/*.site-avatar {
 	
   float: left;
   width: 0px;
@@ -179,7 +179,7 @@ img {
   img {
     border-radius: 5px;
   }
-}
+}*/
 
 .site-info {
   float: left;
