--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,10 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/bim">BIM</a>
+            <a href="{{ site.baseurl }}/">blog</a>
+            <a href="{{ site.baseurl }}/architecture">architecture</a>
+            <a href="{{ site.baseurl }}/bim">bim</a>
+            <a href="{{ site.baseurl }}/about">about</a>
           </nav>
         </header>
       </div>
