--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <a href="{{ site.baseurl }}/">blog</a>
             <a href="{{ site.baseurl }}/architecture">architecture</a>
             <a href="{{ site.baseurl }}/bim">bim</a>
-            <a href="{{ site.baseurl }}/uav">oav</a>
+            <a href="{{ site.baseurl }}/uav">uav</a>
             <a href="{{ site.baseurl }}/vr">vr</a>
             <a href="{{ site.baseurl }}/about">about</a>
           </nav>
