--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,14 @@ body {
   width: 100%;
 }
 
+pre {
+  background-color: #eee;
+  padding: 1em;
+  border: 1px solid black;
+}
+
+
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
