--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,8 +1,10 @@
 
 .highlight {
-  background-color: #efefef;
+  background-color: white;
   padding: 1px 1px 1px 1px;
-  border: 1px solid #ddd;
+  border: 1px solid white;
+  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
   overflow: scroll;
