--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,11 +1,11 @@
 
 .highlight {
-  background-color: white;
+  background-color: lightgrey;
   padding: 1px 1px 1px 1px;
-  border: 1px solid white;
-  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
-  box-shadow: 3px 3px rgba(0,0,0,0.1);
+  border: 1px lightgrey;
+  -moz-box-shadow: 0px 0px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 0px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
   overflow: scroll;
 }
