--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,14 @@ body {
   width: 100%;
 }
 
+.video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+  }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
