--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
             <a href="{{ site.baseurl }}/architecture">architecture</a>
             <a href="{{ site.baseurl }}/bim">bim</a>
             <a href="{{ site.baseurl }}/uav">uav</a>
+            <a href="{{ site.baseurl }}/csharp">C#</a>
             <a href="{{ site.baseurl }}/about">about</a>
           </nav>
         </header>
