--- a/_sass/old/_highlights OLD.scss
+++ b/_sass/old/_highlights OLD.scss
@@ -1,17 +1,17 @@
 
 .highlight {
-  background-color: #F8F8F8;
-  padding: 1px 1px 1px 1px;
-  border: 1px #F8F8F8;
-  -moz-box-shadow: 0px 0px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 0px 0px rgba(0,0,0,0.1);
-  box-shadow: 0px 0px rgba(0,0,0,0.1);
+  background-color: #efefef;
+  padding: 7px 7px 7px 10px;
+  border: 1px solid #ddd;
+  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
+  box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
   overflow: scroll;
 }
 
 code {
-  font-family:'Montserrat','Courier', monospace;
+  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
