--- a/style.scss
+++ b/style.scss
@@ -45,7 +45,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $darkerGray;
+  //color: $darkerGray;
   font-weight: normal;
 
   line-height: 1.7;
@@ -74,7 +74,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $gray;
+  //color: $gray;
 }
 
 p {
