--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,10 +3,12 @@ layout: default
 ---
 
 <article class="page">
-
+  <link rel="stylesheet" href="prism.css">
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
     {{ content }}
+  
+  <script src="prism.js"></script>
   </div>
 </article>
