--- a/style.scss
+++ b/style.scss
@@ -278,7 +278,7 @@ nav {
   .read-more {
     text-transform: uppercase;
     font-size: 13px;
-    color: $darkGray;
+    //color: $darkGray;
   }
 }
 
