--- a/style.scss
+++ b/style.scss
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 30px;
   a {
-    color: inherit;
+    //color: inherit;
   }
 }
 
@@ -137,16 +137,16 @@ img {
 
 .date {
   font-style: italic;
-  color: $gray;
+  //color: $gray;
 }
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: $black;
+  //color: $black;
   background: $lightGray;
 }
 ::selection {
-  color: $black;
+  //color: $black;
   background: $lightGray;
 }
 
@@ -246,7 +246,7 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkGray;
+    //color: $darkGray;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
