--- a/style.scss
+++ b/style.scss
@@ -246,7 +246,7 @@ nav {
 
   a {
     margin-left: 20px;
-    //color: $darkGray;
+    color: $darkGray;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
@@ -285,7 +285,7 @@ nav {
   .read-more {
     text-transform: uppercase;
     font-size: 13px;
-    //color: $darkGray;
+    color: $darkGray;
   }
 }
 
