--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 
 @import "reset";
 @import "variables";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+JP&family=Raleway:wght@200&display=swap');
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -19,7 +20,7 @@ html {
 
 body {
 	background: $white;
-  font: 18px/1.4 $helvetica;
+  font: 18px/1.4 'Montserrat', $helvetica;
   color: $darkGray;
 }
 
@@ -51,7 +52,7 @@ body {
   }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+  font-family: 'Montserrat', $helveticaNeue;
   color: $darkerGray;
   font-weight: normal;
 
@@ -215,7 +216,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
+  font-family: "Montserrat", $helveticaNeue;
   font-weight: 300;
   font-size: 56px;
   letter-spacing: 1px;
@@ -234,7 +235,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
+  font-family: 'Montserrat', $helveticaNeue;
   font-size: 18px;
 
   @include mobile {
