--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,11 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">blog</a>
-            <a href="{{ site.baseurl }}/architecture">architecture</a>
+            <a href="{{ site.baseurl }}/architecture">arch</a>
             <a href="{{ site.baseurl }}/bim">bim</a>
             <a href="{{ site.baseurl }}/uav">uav</a>
             <a href="{{ site.baseurl }}/code">code</a>
+            <a href="{{ site.baseurl }}/gd">gd</a>
             <a href="{{ site.baseurl }}/about">about</a>
           </nav>
         </header>
