--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,18 +1,18 @@
 
 .highlight {
-  background-color: #2e2e2e;
+  background-color: #3f3f3f;
   padding: 1px 1px 1px 1px;
-  border: 1px #000000;
+  border: 2px #000000;
   -moz-box-shadow: 0px 0px rgba(0,0,0,0.1);
   -webkit-box-shadow: 0px 0px rgba(0,0,0,0.1);
-  box-shadow: 0px 0px rgba(0,0,0,0.1);
+  box-shadow: 4px 0px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
   overflow: scroll;
 }
 
 
 code {
-  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  font-family:'Source Code Pro', 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif monospace;
 }
 
 .highlight pre { background-color: #272822; }
