--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,23 +1,23 @@
 
 .highlight {
-  background-color: #3f3f3f;
-  padding: 1px 1px 1px 1px;
-  border: 2px #000000;
-  -moz-box-shadow: 0px 0px rgba(0,0,0,0.1);
-  -webkit-box-shadow: 0px 0px rgba(0,0,0,0.1);
-  box-shadow: 4px 0px rgba(0,0,0,0.1);
+  background-color: #1e1e1e;
+  padding: 7px 7px 7px 10px;
+  border: 1px solid #ddd;
+  -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
+  box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
   overflow: scroll;
 }
 
 
 code {
-  font-family:'Source Code Pro', 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif monospace;
+  font-family: 'Cascadia Code', 'Source Code Pro', sans-serif monospace;
 }
 
-.highlight pre { background-color: #272822; }
-.highlight .hll { background-color: #272822; }
-.highlight .c { color: #75715e } /* Comment */
+//.highlight pre { background-color: #272822; }
+//.highlight .hll { background-color: #272822; }
+.highlight .c { color: #54a13c } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
 .highlight .k { color: #66d9ef } /* Keyword */
 .highlight .l { color: #ae81ff } /* Literal */
