--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -6,7 +6,7 @@
   -moz-box-shadow: 15px 15px rgba(0,0,0,0.1);
   -webkit-box-shadow: 15px 15px rgba(0,0,0,0.1);
   box-shadow: 15px 15px rgba(0,0,0,0.1);
-  margin: 0px 0 0px 0;
+  margin: 10px 10px 10px 10px;
   overflow: scroll;
 }
 
