--- a/style.scss
+++ b/style.scss
@@ -236,6 +236,12 @@ img {
   }
 }
 
+  text-align:center;
+  font-size: 12px;
+  color: $gray;
+}
+
+
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
