--- a/style.scss
+++ b/style.scss
@@ -240,6 +240,19 @@ img {
   text-align:center;
   font-size: 12px;
   color: $gray;
+  a:link, a:visited {
+    color: $gray;
+  }
+  a:hover, a:active {
+    color: red;
+  }
+}
+
+
+.backToTools{
+  text-align:center;
+  font-size: 12px;
+  color: $gray;
 }
 
 
