--- a/style.scss
+++ b/style.scss
@@ -238,7 +238,7 @@ img {
 
 .terms{
   text-align:center;
-  font-size: 12px;
+  font-size: 15px;
   color: $gray;
   a:link, a:visited {
     color: $gray;
@@ -251,8 +251,14 @@ img {
 
 .backToTools{
   text-align:center;
-  font-size: 15px;
+  font-size: 22px;
   color: $gray;
+  a:link, a:visited {
+    color: $gray;
+  }
+  a:hover, a:active {
+    color: red;
+  }
 }
 
 
