--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -79,3 +79,6 @@ code {
 .highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
 .highlight .gd { color: #f92672; } /* Generic.Deleted & Diff Deleted */
 .highlight .gi { color: #a6e22e; } /* Generic.Inserted & Diff Inserted */
+
+
+iframe.example {  width: 100%;  height: 100%; } 
