--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -51,3 +51,5 @@ table {
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
+
+iframe.example {  width: 100%;  height: 100%; } 
