--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -52,4 +52,4 @@ table {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
 
-iframe.example {  width: 100%;  height: 100%; } 
+iframe.example {  width: 100%;  height: auto; } 
