--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -3,7 +3,7 @@
 /* MEYER RESET */
 /***************/
 
-html, body, div, span, applet, object,
+html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -51,5 +51,3 @@ table {
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
-
-iframe.example {  width: 100%;  height: auto; } 
