--- a/style.scss
+++ b/style.scss
@@ -135,8 +135,18 @@ img {
   max-width: 100%;
 }
 
-iframe.example {  width: 100%;  height: 100%; } 
-
+iframe {
+  -moz-transform: scale(0.25, 0.25); 
+  -webkit-transform: scale(0.25, 0.25); 
+  -o-transform: scale(0.25, 0.25);
+  -ms-transform: scale(0.25, 0.25);
+  transform: scale(0.25, 0.25); 
+  -moz-transform-origin: top left;
+  -webkit-transform-origin: top left;
+  -o-transform-origin: top left;
+  -ms-transform-origin: top left;
+  transform-origin: top left;
+}
 
 // Fixes images in popup boxes from Google Translate
 .gmnoprint img {
